--- a/src/main/resources/templates/fragments/adminFragment.html
+++ b/src/main/resources/templates/fragments/adminFragment.html
@@ -1,17 +1,13 @@
-<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout">
-<head>
-    <title>Add a new user</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <body>
-<section layout:fragment="content">
+
+<div th:fragment="header">
+    <p>Welcome to the admin page of Intreviews Tracking</p>
 
 
-    <h1>Form</h1>
-    <form action="#" th:action="@{/user/add}" th:object="${user}" method="post">
+    <h1>Add a new user to the Interviews Tracking Website</h1>
+    <form action="#" th:action="@{/interview-tracking/admin/user/add}" th:object="${user}" method="post">
         <p>username: <input type="text" th:field="*{username}"/></p>
         <p>emailId: <input type="text" th:field="*{emailId}"/></p>
         <p>mobileNo: <input type="text" th:field="*{mobileNo}"/></p>
@@ -22,8 +18,8 @@
         <p>professionType: <input type="text" th:field="*{professionType}"/></p>
         <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
     </form>
-</section>
+
+</div>
 
 </body>
-
 </html>
