--- a/src/main/resources/templates/searchUserResult.html
+++ b/src/main/resources/templates/searchUserResult.html
@@ -10,10 +10,9 @@
 
 <section layout:fragment="content">
 
+    <div th:replace="fragments/userDetailFragment :: header">...</div>
 
-    <h1>Result</h1>
-    <p th:text="'id: ' + ${user.id}"/>
-    <a href="/interview-tracking/user/add">add another user</a>
+
 </section>
 
 </body>
