--- a/src/main/resources/templates/fragments/indexFragment.html
+++ b/src/main/resources/templates/fragments/indexFragment.html
@@ -7,7 +7,7 @@
 
 
     <b><p>Enter User Id</p></b>
-    <form  action="/interview-tracking/searchUser" th:action="@{/interview-tracking/searchUser}" method="get">
+    <form  th:action="@{/interview-tracking/searchUser}" method="get">
         <input name="userId" >
         <input type="submit" value="Search User"/>
     </form>
