--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -67,6 +67,34 @@
             "dom": 'ti'
         });
     })
+    $(function () {
+        $("#interviewDetail").dataTable({
+            "dom": 'ti'
+        });
+    })
+
+    $(function () {
+        $("#searchInterviewResult").dataTable({
+            dom: 'lBfrtip',
+            buttons: [
+                'copy', 'csv', 'excel', 'pdf', 'print'
+            ]
+        });
+    })
+
+
+
+    $(function () {
+        $("#searchInterviewRoundResult").dataTable({
+            dom: 'lBfrtip',
+            buttons: [
+                'copy', 'csv', 'excel', 'pdf', 'print'
+            ]
+        });
+    })
+
+
+
 </script>
 </body>
 </html>
