--- a/src/main/resources/templates/userSaveResult.html
+++ b/src/main/resources/templates/userSaveResult.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout">
 <head>
-    <title>Getting Started: Handling Form Submission</title>
+    <title>Add user</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
