--- a/src/main/resources/templates/addInterviewRound.html
+++ b/src/main/resources/templates/addInterviewRound.html
@@ -27,9 +27,9 @@
     <a th:href="@{'/interview-tracking/interview-round/get?interviewId=' + ${interview.id}}">Interview Detail Page</a>
     <br>
 
+
     <br>
-    <br>
-    <a th:href="@{'/interview-tracking/searchUser?userId=' + ${user.id}}">My Homepage</a>
+    <div th:replace="fragments/homepageLinkFragment :: header">...</div>
     <br>
 
 
